<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".FragmentosAdministrador.PerfilAdmin">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/PERFILADMINISTRADOR"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#5499C7"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/FOTOPERFILIMG"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="23dp"
            android:src="@drawable/perfil"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000"
            android:layout_marginTop="60dp"/>

        <TextView

            android:text="@string/MIINFORMACIONTXT"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#5499C7"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/UAIPERFILTXT"
                android:text="@string/UAIPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/UAIPERFIL"
                android:text="@string/UAIPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="15sp"
                android:textColor="#000"/>




        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/NOMBRESPERFILTXT"
                android:text="@string/NOMBRESPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/NOMBRESPERFIL"
                android:text="@string/NOMBRESPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="15sp"
                android:textColor="#000"/>




        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/APELLIDOSPEFILTXT"
                android:text="@string/APELLIDOSPEFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/APELLIDOSPERFIL"
                android:text="@string/APELLIDOSPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="15sp"
                android:textColor="#000"/>




        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/CORREOPERFILTXT"
                android:text="@string/CORREOPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/CORREOPERFIL"
                android:text="@string/CORREOPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="15sp"
                android:textColor="#000"/>




        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/PASSWORDPERFILTXT"
                android:text="@string/PASSWORDPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/PASSWORDPERFIL"
                android:text="@string/PASSWORDPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="15sp"
                android:textColor="#000"/>




        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/EDADPERFILTXT"
                android:text="@string/EDADPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/EDADPERFIL"
                android:text="@string/EDADPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="15sp"
                android:textColor="#000"/>




        </androidx.appcompat.widget.LinearLayoutCompat>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000"
            android:layout_marginTop="10dp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>