<?xml version="1.0" encoding="utf-8"?>


    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context=".FragmentosCliente.InicioCliente">






        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:text="@string/Menu"
                android:textColor="#000"
                android:gravity="center"
                android:textSize="45dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text=""
                android:textColor="#000"
                android:layout_gravity="right"
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_marginTop="-32dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:layout_gravity="right"
                android:layout_width="00dp"
                android:layout_height="00dp"
                android:entries="@array/spinner_values"/>

            <!--Fila 1 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:weightSum="2">

                <!--CevicheA & Tostadas -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:src="@drawable/ceviche"/>

                    <Button
                        android:id="@+id/CevichesTostadas"
                        android:text="@string/CevichesTostadas"
                        android:background="@drawable/btn_personalizado"
                        android:textColor="#fff"
                        android:layout_marginTop="10dp"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--Cocina & Combie -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:src="@drawable/cocina"/>

                    <Button
                        android:id="@+id/CocinaCombieKids"
                        android:text="@string/CocinaCombieKids"
                        android:background="@drawable/btn_personalizado"

                        android:textColor="#fff"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>




            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- Fila 2-->
            <androidx.appcompat.widget.LinearLayoutCompat

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:weightSum="2">

                <!--Quesadillas & Tacos -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:src="@drawable/tacos"/>

                    <Button
                        android:id="@+id/QuesadillasTacos"
                        android:text="@string/QuesadillasTacos"
                        android:background="@drawable/btn_personalizado"

                        android:textColor="#fff"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--Kids & Extra-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:src="@drawable/kids"/>

                    <Button
                        android:id="@+id/KidsExtra"
                        android:text="@string/KidsExtra"
                        android:background="@drawable/btn_personalizado"

                        android:textColor="#fff"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>








            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--Fila 3 -->
            <androidx.appcompat.widget.LinearLayoutCompat

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:weightSum="2">

                <!--Con alcohol-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:src="@drawable/alcohol"/>

                    <Button
                        android:id="@+id/ConAlcohol"
                        android:text="@string/ConAlcohol"
                        android:background="@drawable/btn_personalizado"

                        android:textColor="#fff"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--Sin alchol-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:src="@drawable/sinalcohol"/>

                    <Button
                        android:id="@+id/SinAlcohol"
                        android:text="@string/SinAlcohol"
                        android:background="@drawable/btn_personalizado"

                        android:textColor="#fff"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>






            </androidx.appcompat.widget.LinearLayoutCompat>





        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>